# rm_pid_tuner

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  package.xml
cfg/: PidTuner.cfg
config/: pid_tuner_config.yaml
include/rm_pid_tuner/: controller_factory.h  data_buffer.h  pid_analyzer.h  pid_tuner.h  tuning_history.h  visualizer.h
launch/: pid_tuner.launch
msg/: PidParams.msg  TuningLog.msg  TuningStatus.msg
plugins/rqt_pid_tuner/: plugin.xml  setup.py
plugins/rqt_pid_tuner/src/rqt_pid_tuner/: __init__.py  pid_tuner_plugin.py
scripts/: llm_interface.py
src/: data_buffer.cpp  pid_analyzer.cpp  pid_tuner.cpp  pid_tuner_node.cpp  tuning_history.cpp  visualizer.cpp
srv/: LLMAnalyze.srv  SetPidParams.srv  StartTuning.srv  StopTuning.srv
visualization/web/: index.html
visualization/web/css/: style.css
visualization/web/js/: app.js
